<resources>
    <string name="app_name">CoronaApp</string>

    <string name="txt_titulo">Título</string>
    <string name="txt_tema">Tema</string>
    <string name="txt_descripcion">Descripción</string>
    <string name="btn_aceptar">ACEPTAR</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_agregar">AGREGAR</string>
    <string name="txt_noticias">NOTICIAS</string>
    <string name="list_noticias">NOTICIAS2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
