<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="30sp"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30sp">

            <TextView
                android:id="@+id/lbl_titulo"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                android:text="@string/txt_titulo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_titulo"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:autofillHints=""
                android:ems="10"
                android:gravity="top"
                android:hint="@string/txt_titulo"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/lbl_tema"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                android:text="@string/txt_tema"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_tema"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:autofillHints=""
                android:ems="10"
                android:gravity="top"
                android:hint="@string/txt_tema"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lbl_descripcion"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                android:text="@string/txt_descripcion"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_descripcion"
                android:layout_width="304dp"
                android:layout_height="149dp"
                android:layout_gravity="left"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/txt_descripcion"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/aceptar"
                android:layout_width="246dp"
                android:layout_height="64dp"
                android:layout_gravity="right"
                android:text="@string/btn_aceptar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>