<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:focusable="true"
        android:focusableInTouchMode="true"

        tools:context=".Noticia_view">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="35dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20sp"
                android:paddingTop="0sp"
                android:paddingEnd="20sp">


                <TextView
                    android:id="@+id/lbl_titulo"
                    android:layout_width="328dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start|center_horizontal"
                    android:gravity="bottom"
                    android:text="@string/txt_titulo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_titulo"
                    android:layout_width="328dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/txt_titulo"
                    android:inputType="textPersonName"
                    android:textAllCaps="false"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/lbl_tema"
                    android:layout_width="328dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:gravity="bottom"
                    android:text="@string/txt_tema"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_tema"
                    android:layout_width="328dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/txt_tema"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/lbl_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:gravity="bottom"
                    android:text="@string/txt_fecha"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/txt_fecha"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/lbl_descripcion"
                    android:layout_width="328dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:gravity="bottom"
                    android:text="@string/txt_descripcion"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_descripcion"
                    android:layout_width="328dp"
                    android:layout_height="149dp"
                    android:layout_gravity="start"
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/txt_descripcion"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

                <LinearLayout
                    android:id="@+id/buttons_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_cancelar"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="162dp"
                        android:layout_height="wrap_content"
                        android:onClick="Cancelar"
                        android:text="@string/btn_cancelar" />

                    <Button
                        android:id="@+id/btn_aceptar"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="162dp"
                        android:layout_height="wrap_content"
                        android:onClick="Aceptar"
                        android:text="@string/btn_aceptar" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView

        android:id="@+id/navigator"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start"/>


</androidx.drawerlayout.widget.DrawerLayout>